--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   creditURL = 'https://www.datavizforall.org/highcharts';
 
   $(function() {
-    $.get('data-scatter.csv', function(csv) {     // EDIT to match your CSV data file name
+    $.get('./data-scatter.csv', function(csv) {     // EDIT to match your CSV data file name
       Highcharts.chart('container', {
         chart: {
           type: 'scatter',
@@ -37,11 +37,11 @@
         },
 
         title: {
-          text: 'Highcharts scatter chart from CSV'  // EDIT to insert your chart title
+          text: 'Income and Test scores from Connecticut School Districts (2009-13)'  // EDIT to insert your chart title
         },
 
         subtitle: {
-          text: 'View <a href="data-scatter.csv"> source data from Trend CT, NY Times, Washington Post </a>', // EDIT link and text
+          text: 'View <a href="./data-scatter.csv"> source data from Trend CT, NY Times, Washington Post </a>', // EDIT link and text
           useHTML: true
         },
 
