--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         },
 
         subtitle: {
-          text: 'View <a href="./data-scatter.csv"> source data from Trend CT, NY Times, Washington Post </a>', // EDIT link and text
+          text: 'View <a href="data-scatter.csv"> source data from Trend CT, NY Times, Washington Post </a>', // EDIT link and text
           useHTML: true
         },
 
